feat: Add share and url param update

--- a/locales/es.json
+++ b/locales/es.json
@@ -1,6 +1,7 @@
 {
   "readingTitle": "Leyendo: {hostname}",
   "loadButton": "Cargar",
+  "shareButton": "Compartir",
   "inputPlaceholder": "Ingrese la URL para leer",
   "footerCopy": "© {year} SAFEReader. Todos los derechos reservados.",
   "langEnglish": "Inglés",
