--- a/locales/en.json
+++ b/locales/en.json
@@ -1,6 +1,7 @@
 {
   "readingTitle": "Reading: {hostname}",
   "loadButton": "Load",
+  "shareButton": "Share",
   "inputPlaceholder": "Enter URL to read",
   "footerCopy": "© {year} SAFEReader. All rights reserved.",
   "langEnglish": "English",
