Add server capabilities and prepare CF deploy

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -2,12 +2,17 @@
   "readingTitle": "Reading: {hostname}",
   "loadButton": "Load",
   "shareButton": "Share",
+  "closeButton": "Close",
   "inputPlaceholder": "Enter URL to read",
   "heroTitle": "Read shared links safely",
   "heroSubtitle": "Paste any URL to load it inside a sandboxed frame (no JavaScript).",
   "footerCopy": "{year} – SAFEReader",
   "langEnglish": "English",
   "langSpanish": "Spanish",
+  "switchToReaderMode": "Switch to Reader Mode",
+  "promptTitle": "Trouble viewing this page?",
+  "promptBody": "This site may be blocking the preview. Try Reader Mode instead.",
+  "promptAction": "Open Reader View",
   "navHome": "Home",
   "navAbout": "About",
   "navTerms": "Terms",
