--- a/app/locales/es.json
+++ b/app/locales/es.json
@@ -2,12 +2,17 @@
   "readingTitle": "Leyendo: {hostname}",
   "loadButton": "Cargar",
   "shareButton": "Compartir",
+  "closeButton": "Cerrar",
   "inputPlaceholder": "Ingrese la URL para leer",
   "heroTitle": "Lee enlaces compartidos con seguridad",
   "heroSubtitle": "Pega cualquier URL para abrirla en un marco aislado (sin JavaScript).",
   "footerCopy": "{year} – SAFEReader",
   "langEnglish": "Inglés",
   "langSpanish": "Español",
+  "switchToReaderMode": "Ir a Modo Lectura",
+  "promptTitle": "¿Problemas para ver la página?",
+  "promptBody": "Este sitio podría estar bloqueando la vista previa. Prueba el Modo Lectura.",
+  "promptAction": "Abrir Modo Lectura",
   "navHome": "Inicio",
   "navAbout": "Acerca de",
   "navTerms": "Términos",
