Added logo, favicons, brand, faq and mobile menu

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -6,7 +6,7 @@
   "inputPlaceholder": "Enter URL to read",
   "heroTitle": "Read shared links safely",
   "heroSubtitle": "Paste any URL to load it inside a sandboxed frame (no JavaScript).",
-  "footerCopy": "{year} – SAFEReader",
+  "footerCopy": "{year} – [SAFE]Reader",
   "langEnglish": "English",
   "langSpanish": "Spanish",
   "switchToReaderMode": "Switch to Reader Mode",
@@ -17,17 +17,29 @@
   "navAbout": "About",
   "navTerms": "Terms",
   "blog.title": "Blog",
-  "blog.subtitle": "Updates and notes from Safe Reader",
+  "blog.subtitle": "Updates and notes from [SAFE]Reader",
   "blog.empty": "No posts available in this language yet.",
   "blog.readMore": "Read more",
   "blog.notFound": "We couldn't find that post.",
   "blog.back": "Back to the blog",
-  "about.title": "About Safe Reader",
-  "about.body1": "Safe Reader lets you inspect shared links inside a sandboxed view so you can decide whether to trust them.",
+  "about.title": "About [SAFE]Reader",
+  "about.body1": "[SAFE]Reader lets you inspect shared links inside a sandboxed view so you can decide whether to trust them.",
   "about.body2": "The project is open source and welcomes contributions from the community.",
   "terms.title": "Terms",
-  "terms.body1": "Safe Reader previews links inside an isolated iframe to reduce risk, but you remain responsible for the URLs you open.",
+  "terms.body1": "[SAFE]Reader previews links inside an isolated iframe to reduce risk, but you remain responsible for the URLs you open.",
   "terms.body2": "We do not store the URLs you preview; the address stays within your browser.",
-  "terms.body3": "By using Safe Reader you agree to use it responsibly and comply with local regulations.",
-  "terms.body4": "We disclaim any liability for damages resulting from the use of Safe Reader. We only access what is published publicly on the web."
+  "terms.body3": "By using [SAFE]Reader you agree to use it responsibly and comply with local regulations.",
+  "terms.body4": "We disclaim any liability for damages resulting from the use of [SAFE]Reader. We only access what is published publicly on the web.",
+  "navFaq": "FAQ",
+  "faq.title": "Frequently Asked Questions",
+  "faq.q1": "Is [SAFE]Reader stealing content from publishers?",
+  "faq.a1": "No. [SAFE]Reader does not copy, store, or redistribute any content. It simply displays publicly available web pages inside a sandboxed frame, similar to how your browser would render them if you visited the URL directly, or how some browser display the content in a reader mode. The original content remains on the publisher's servers at all times.",
+  "faq.q2": "Is it legal to view content this way?",
+  "faq.a2": "The content accessed through [SAFE]Reader is publicly available on the internet. Anyone with a web browser can access it. [SAFE]Reader merely provides an alternative way to view what is already freely accessible — much like how search engines, web archives, and RSS readers fetch and display public web content.",
+  "faq.q3": "Could this violate a website's terms of service?",
+  "faq.a3": "Some websites may have terms of service that restrict automated access or how their content is displayed. We understand that using [SAFE]Reader could potentially conflict with certain terms. However, the way [SAFE]Reader accesses content is functionally no different from how search engine crawlers, browser extensions, and other widely used tools read publicly available pages every day.",
+  "faq.q4": "How does [SAFE]Reader access content?",
+  "faq.a4": "[SAFE]Reader fetches the publicly available HTML of a web page — the same content that any web browser, search engine bot, or web crawler would receive when requesting the URL. No paywalls are bypassed, no authentication is circumvented, and no private content is accessed.",
+  "faq.q5": "What if a publisher has a complaint?",
+  "faq.a5": "We take publisher concerns seriously. If you are a content owner and have concerns about how [SAFE]Reader interacts with your website, we would be happy to hear from you and work together to find a fair resolution. Please reach out to us."
 }
