add error messages

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -13,6 +13,9 @@
   "promptTitle": "Trouble viewing this page?",
   "promptBody": "This site may be blocking the preview. Try Reader Mode instead.",
   "promptAction": "Open Reader View",
+  "errorReaderFailed": "Failed to load reader mode",
+  "errorInvalidUrl": "Invalid URL",
+  "errorFailedUrl": "Failed to load URL",
   "navHome": "Home",
   "navAbout": "About",
   "navTerms": "Terms",
