--- a/app/locales/es.json
+++ b/app/locales/es.json
@@ -14,6 +14,9 @@
   "promptBody": "Este sitio podría estar bloqueando la vista previa. Prueba el Modo Lectura.",
   "promptAction": "Abrir Modo Lectura",
   "navHome": "Inicio",
+  "errorReaderFailed": "Error al cargar el modo lectura",
+  "errorInvalidUrl": "URL inválida",
+  "errorFailedUrl": "Error al cargar la URL",
   "navAbout": "Acerca de",
   "navTerms": "Términos",
   "blog.title": "Blog",
